fix trending movies scroll error + hide both scrollbars

--- a/src/index.css
+++ b/src/index.css
@@ -3,12 +3,14 @@
 @tailwind utilities;
 
 /* hide scrollbar globally or via class */
-.scrollbar-hide::-webkit-scrollbar {
-  display: none;
+
+.no-scrollbar::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
 }
-.scrollbar-hide {
-  -ms-overflow-style: none; /* IE/Edge */
+
+.no-scrollbar {
   scrollbar-width: none; /* Firefox */
+  -ms-overflow-style: none; /* IE/Edge */
 }
 
 .clip-custom {
